<?xml version="1.0"?>
<package format="2">
  <name>op3_topic_tutorials</name>
  <version>0.1.0</version>
  <description>The op3_topic_tutorials package</description>


  <maintainer email="kwaksw10101@naver.com">rdolf</maintainer>


  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend> 
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>op3_action_module_msgs</depend>
  <depend>op3_walking_module_msgs</depend>
  <depend>op3_online_walking_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_math</depend>
  <depend>op3_kinematics_dynamics</depend>
  <depend>op3_balance_control</depend>
  <depend>open_cr_module</depend>
  <depend>op3_base_module</depend>
  <depend>op3_head_control_module</depend>
  <depend>op3_walking_module</depend>
  <depend>op3_action_module</depend>
  <depend>op3_direct_control_module</depend>
  <depend>op3_online_walking_module</depend>
  <depend>op3_tuning_module</depend>
  <depend>op3_tuning_module_msgs</depend>
  <exec_depend>op3_localization</exec_depend>
</package>
